WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17328
REGRESSION (
r30147
): Inspector is unstyled on Windows
https://bugs.webkit.org/show_bug.cgi?id=17328
Summary
REGRESSION (r30147): Inspector is unstyled on Windows
Matt Lilek
Reported
2008-02-12 09:54:03 PST
Something between
r30123
and
r30154
caused the inspector to be unstyled on Windows.
Attachments
screenshot
(69.75 KB, image/png)
2008-02-12 10:05 PST
,
Matt Lilek
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2008-02-12 10:05:11 PST
Created
attachment 19092
[details]
screenshot
Adam Roben (:aroben)
Comment 2
2008-02-12 10:12:38 PST
I can reproduce this with
r30154
.
Adam Roben (:aroben)
Comment 3
2008-02-12 10:42:14 PST
Reduced this down a little further: Works in
r30146
, doesn't work in
r30151
.
Adam Roben (:aroben)
Comment 4
2008-02-12 10:43:05 PST
My guess is that
r30147
is causing this <
http://trac.webkit.org/projects/webkit/changeset/30147
>.
Adam Roben (:aroben)
Comment 5
2008-02-12 10:45:33 PST
I'll bet we need to add a case for ".css" files to the workaround at <
http://trac.webkit.org/projects/webkit/browser/trunk/WebCore/platform/network/cf/ResourceResponseCFNet.cpp?rev=29841#L104
>.
Adam Roben (:aroben)
Comment 6
2008-02-12 10:58:50 PST
<
rdar://problem/5737946
>
Adam Roben (:aroben)
Comment 7
2008-02-12 11:33:34 PST
Fixed in
r30171
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug