 Fix Bug 17328: REGRESSION (r30147): Inspector is unstyled on Windows

WebCore:

         Fix Bug 17328: REGRESSION (r30147): Inspector is unstyled on Windows

         <http://bugs.webkit.org/show_bug.cgi?id=17328>
         <rdar://5737946>

         Reviewed by Mitz.

         Test: fast/loader/local-css-allowed-in-strict-mode.html

         * platform/network/cf/ResourceResponseCFNet.cpp:
         (WebCore::ResourceResponse::doUpdateResourceResponse): Add a case for
         .css files.

 LayoutTests:

         Add a test for Bug 17328: REGRESSION (r30147): Inspector is unstyled
         on Windows

         <http://bugs.webkit.org/show_bug.cgi?id=17328>
         <rdar://5737946>

         Reviewed by Mitz.

         * fast/loader/local-css-allowed-in-strict-mode-expected.txt: Added.
         * fast/loader/local-css-allowed-in-strict-mode.html: Added.
         * fast/loader/resources/stylesheet.css: Added.


Canonical link: https://commits.webkit.org/23979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30171 268f45cc-cd09-0410-ab3c-d52691b4dbfc